fix alias open-browser

--- a/dein.toml
+++ b/dein.toml
@@ -53,6 +53,6 @@ repo = 'kchmck/vim-coffee-script'
 # Markdownプレビュー Po
 [[plugins]]
 repo = 'kannokanno/previm'
-# ブラウザ検索 ob
+# ブラウザ検索 Bo
 [[plugins]]
 repo = 'tyru/open-browser.vim'
