add: airblade/vim-gitgutter

--- a/dein.toml
+++ b/dein.toml
@@ -56,3 +56,7 @@ repo = 'kannokanno/previm'
 # ブラウザ検索 Bo
 [[plugins]]
 repo = 'tyru/open-browser.vim'
+
+# Git差分表示
+[[plugins]]
+repo = 'airblade/vim-gitgutter'
