--- a/dein.toml
+++ b/dein.toml
@@ -56,3 +56,7 @@ repo = 'tyru/open-browser.vim'
 # Git差分表示
 [[plugins]]
 repo = 'airblade/vim-gitgutter'
+
+# Dockerfileシンタックス
+[[plugins]]
+repo = 'ekalinin/Dockerfile.vim'
